# resume_markdown_to_toml

./: .gitignore  Cargo.toml  README.md  resume.toml
examples/: resume.json  resume.md  resume.yaml
scripts/: generate_resume.sh  publish.sh  run.sh  watch.sh
src/: data.rs  html.rs  main.rs  parser.rs
src/static/: styles.css
templates/: base.html  macros.html  resume.html
